tests/ui/privacy/private-field-ty-err.stderr
error[E0616]: field `len` of struct `Foo` is private
  --> $DIR/private-field-ty-err.rs:3:10
   |
LL |     if x.len {
   |          ^^^ private field

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
